# Tarator

./: .gitignore  Cargo.toml  README.md  SECURITY.md  TODO.md
.github/workflows/: rust.yml
assets/: test.rs  test2.rs
crates/scr_manager/: Cargo.toml
crates/scr_manager/src/: lib.rs
crates/scr_types/: Cargo.toml
crates/scr_types/macros/: Cargo.toml
crates/scr_types/macros/src/: lib.rs
crates/scr_types/scr_types_macros/src/: lib.rs
crates/scr_types/src/: components.rs  ecs_serde.rs  game_state.rs  lib.rs  tests.rs
crates/scr_types/src/component/: de.rs  mod.rs  ser.rs
crates/tar_abi/: Cargo.toml
crates/tar_abi/src/: lib.rs
crates/tar_assets/: Cargo.toml
crates/tar_assets/src/: lib.rs  material.rs  mesh.rs  model.rs  node.rs  object.rs  primitive.rs  root.rs  scene.rs  shader.rs  texture.rs  uniform.rs  uniform_descs.md
crates/tar_assets/src/shaders/: pbr_bindings.wgsl  pbr_types.wgsl  static_pbr.wgsl  uniform_descs.md
crates/tar_audio/: Cargo.toml
crates/tar_audio/src/: lib.rs
crates/tar_core/: Cargo.toml
crates/tar_core/src/: add_object.rs  convert_event.rs  double_buffer.rs  error_msg.rs  lib.rs  pre_render.rs  render.rs  state.rs
crates/tar_debug/: Cargo.toml
crates/tar_debug/macros/: Cargo.toml
crates/tar_debug/macros/src/: lib.rs
crates/tar_debug/src/: lib.rs  tests.rs  trace.rs
crates/tar_ecs/: Cargo.toml
crates/tar_ecs/macros/: Cargo.toml
crates/tar_ecs/macros/src/: lib.rs
crates/tar_ecs/src/: archetype.rs  bundle.rs  callback.rs  component.rs  entity.rs  error.rs  id.rs  lib.rs  query.rs  storage.rs  tests.rs  type_info.rs  type_pool.rs  world.rs
crates/tar_ecs/src/component/: arche.rs  mod.rs  pool.rs  store.rs  tuple.rs  view.rs
crates/tar_ecs/src/entity/: desc.rs  description.rs  entity_id.rs  mod.rs  view.rs
crates/tar_ecs/src/store/: mod.rs  raw_store.rs  sparse.rs  table.rs
crates/tar_ecs/src/world/: mod.rs  view.rs
crates/tar_entry/: Cargo.toml
crates/tar_entry/src/: main.rs
crates/tar_gui/: Cargo.toml
crates/tar_gui/src/: entity_viewer.rs  lib.rs
crates/tar_preprocess/: Cargo.toml
crates/tar_preprocess/src/: lib.rs
crates/tar_render/: Cargo.toml  build.rs
crates/tar_render/res/: bunny_tex2.mtl
crates/tar_render/src/: camera.rs  lib.rs  model.rs  render_functions.rs  resources.rs  shader.wgsl  state.rs  texture.rs
crates/tar_render/src/model/: material.rs  mod.rs  texture.rs
crates/tar_render/src/render/: deferred.rs  forward.rs  mod.rs
crates/tar_res/: Cargo.toml
crates/tar_res/src/: builder.rs  lib.rs  material.rs  mesh.rs  node.rs  object.rs  primitive.rs  root.rs  scene.rs  shader.rs  texture.rs  uniform.rs  vertex.rs
crates/tar_res/src/model/: material.rs  mod.rs  serde_helpers.rs
crates/tar_res/src/store/: mod.rs  store_material.rs  store_mesh.rs  store_node.rs  store_object.rs  store_primitive.rs  store_texture.rs
crates/tar_scripting/: Cargo.toml
crates/tar_scripting/src/: lib.rs
crates/tar_shader/: Cargo.toml  build.rs
crates/tar_shader/shaders/: shader.wgsl
crates/tar_shader/src/: lib.rs  shader.rs
crates/tar_types/: Cargo.toml
crates/tar_types/src/: camera.rs  components.rs  lib.rs  prims.rs  script.rs  state.rs
crates/tar_utils/: Cargo.toml
crates/tar_utils/src/: lib.rs
crates/tarator/: Cargo.toml
crates/tarator/src/: main.rs
data/: world.json
res/: Box_0.tarasset  SyArm_0.tarasset
res/Plane/: Plane.gltf
res/TexturedBox/: BoxTextured.gltf
scripts/: Cargo.toml  Info.toml
scripts/.cargo/: config.toml
scripts/src/: internal.rs  lib.rs  playercomponent.rs
shaders/: pbr_deferred_geometry.wgsl  pbr_types.wgsl  produced_shader.wgsl  res.wgsl  static_pbr.wgsl
