[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tar_types = { path = "../crates/tar_types" }
tar_abi = { path = "../crates/tar_abi" }
tar_ecs = { path = "../crates/tar_ecs" }
libc = "0.2"
