[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
scr_types = { path = "../crates/scr_types" }
tar_ecs = { path = "../crates/tar_ecs" }
libc = "0.2"
