[package]
name = "scr_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scr_types_macros = { path = "macros/" }
tar_ecs = { path = "../tar_ecs" }

uuid = { version = "1", features = ["v4"] }
glam = { version = "0.23.0", features = ["serde"] }
serde = "1.0"
erased-serde = "0.3.25"
fxhash = "0.2.1"

[dev-dependencies]
serde_json = "1.0"

