[package]
name = "tar_assets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
tobj = { version = "3.2.3", features = ["async"]}
easy-gltf = "0.1"
gltf = "1.0"
cfg-if = "1"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]