[package]
name = "tar_assets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tar_utils = {path = "../tar_utils"}
# tar_preprocess = {path = "../tar_preprocess"}
wgsl_preprocessor = {git = "https://github.com/slackers123/wgsl_preprocessor.git"}
thiserror = "1.0"
cfg-if = "1"
gltf = "1"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
cgmath = "0.18"
wgpu = "0.*"
# easy-gltf = {version = "0.1", git = "https://github.com/slackers123/easy-gltf.git", features = ["names", "extras"]}
# three-d-asset = {version="0.4", features=["gltf", "image", "png"]}
chrono = {version="0.4", features=["serde", "clock"]}
bytemuck = { version = "1.12.1", features = [ "derive" ] }
rayon = "1.5"
bitflags = "1.3"
base64 = "0.13"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde",
]
