[package]
name = "tar_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui-winit = "0.21.1"
egui-wgpu = "0.21.0"
wgpu = "0.15.1"
winit = "0.28.1"
eframe = { version = "0.21.3", features = ["wgpu"] }
tar_render = { path = "../tar_render" }
tar_res = { path = "../tar_res" }
tar_gui = { path = "../tar_gui" }
tar_types = { path = "../tar_types" }
tar_ecs = { path = "../tar_ecs" }
cfg-if = "1"
env_logger = "0.10.0"
log = "0.4.17"
cgmath = "0.18"
instant = "0.1.12"
bytemuck = { version = "1.12.1", features = ["derive"] }
threadpool = "1.8.1"
crossbeam-channel = "0.5.6"
parking_lot = "0.12"
pollster = "0.3.0"
uuid = { version = "1.3.0", features = ["v4"] }


[dependencies.tokio]
version = "1"
features = ["rt"]
