[package]
name = "tar_entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tar_gui = {path="../tar_gui"}
tar_render = {path="../tar_render"}
# tar_assets = {path="../tar_assets"}
# tar_preprocess = {path="../tar_preprocess"}
tar_res = {path="../tar_res"}
pollster = "0.2.5"