[package]
name = "tar_entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar_gui = {path="../tar_gui"}
# tar_render = {path="../tar_render"}
tar_res = {path="../tar_res"}
pollster = "0.2.5"
tokio = {version = "1", features=["full"]}