[package]
name = "tar_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
egui-winit = "0.20.1"
egui-wgpu = "0.20.0"
wgpu = "0.14"
winit = "0.27.4"
eframe = {version="0.20.1", features=["wgpu"]}
tar_render = {path="../tar_render"}
cfg-if = "1"
env_logger = "0.10.0"
log = "0.4.17"
cgmath = "0.18"
instant = "0.1.12"
bytemuck = {version="1.12.1", features=["derive"]}