[package]
name = "tar_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15.1"
cgmath = "0.18.0"
bytemuck = { version = "1.13", features = ["derive"] }
memoffset = "0.8.0"
easy-gltf = "1"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }


tar_res = { path = "../tar_res" }
tar_shader = { path = "../tar_shader" }
tar_types = { path = "../tar_types" }
