[package]
name = "tar_render"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.28.3"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15.1"
glam = { version = "0.23.0", features = ["serde", "bytemuck"] }
bytemuck = { version = "1.13", features = ["derive"] }
memoffset = "0.8.0"
easy-gltf = { git = "https://github.com/slackers123/easy-gltf" }
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
encase = "0.5"
bitflags = "2.1"

tar_res = { path = "../tar_res" }
scr_types = { path = "../scr_types" }
tar_shader = { path = "../tar_shader" }
async-trait = "0.1.60"
uuid = { version = "1.3.0", features = ["v4"] }
threadpool = "1.8.1"
crossbeam-channel = "0.5.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11.12" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }

[build-dependencies]
anyhow = "1.0.65"
fs_extra = "1.2"
glob = "0.3"
