[package]
name = "tar_res"
version = "0.1.0"
edition = "2021"

[dependencies]
tar_utils = { path = "../tar_utils" }
thiserror = "1.0"
cfg-if = "1"
gltf = "1"
cgmath = { version = "0.18", features = ["serde"] }
wgpu = "0.15.1"
bytemuck = { version = "1.12.1", features = ["derive"] }
bitflags = { version = "1.3" }
base64 = "0.21.0"
# Paralell Iterators
rayon = "1.5"

# The following dependencies are for the storing of assets
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
chrono = { version = "0.4", features = ["serde", "clock"] }


[dependencies.wgsl_preprocessor]
git = "https://github.com/slackers123/wgsl_preprocessor"
rev = "751da8c"
features = ["array_vectors"]
# path = "../../../wgsl_preprocessor"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "serde",
]
