[package]
name = "tar_res"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-gltf = { git = "https://github.com/slackers123/easy-gltf" }
# cgmath = { version = "0.18.0", features = ["serde"] }
glam = { version = "0.23.0", features = ["serde"] }
bytemuck = { version = "1.13", features = ["derive"] }
image = { version = "0.24.6", features = [] }
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"

tar_shader = { path = "../tar_shader" }
tar_types = { path = "../tar_types" }
