[package]
name = "scr_types_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.14", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
tar_ecs_macros = { path = "../../tar_ecs/macros" }

